# Food_mass_estimation

./: .dockerignore  .gitignore  Dockerfile  README-Docker.md  README.md  debug_image_test.py  docker-compose.prod.yml  docker-compose.yml  env_ex.txt  main.py  nginx.conf  pyproject.toml  requirements.txt  result.json  simple_yolo_test.py  websocket_test.html
.kiro/steering/: product.md  structure.md  tech.md
api/: endpoints.py  main.py  schemas.py
config/: settings.py
core/: estimation_service.py
data/: reference_objects.json
models/: llm_model.py  midas_model.py  yolo_model.py
scripts/: docker-build.sh
utils/: base_model.py  camera_info_extractor.py  debug_helper.py  feature_extraction.py  logging_utils.py  reference_objects.py
weights/: yolo_food_v1.pt
