[project]
name = "yolo-midas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "numpy>=2.3.1",
    "openai>=1.93.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "timm>=1.0.16",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "ultralytics>=8.3.162",
]
