[project]
name = "yolo-midas"
version = "1.0.0"
description = "AI 기반 음식 질량 추정 시스템 (YOLO + MiDaS + LLM)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    # AI/ML 핵심 패키지
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "ultralytics>=8.3.162",
    "timm>=1.0.16",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "scikit-image>=0.25.2",
    "scipy>=1.16.0",
    
    # LLM API
    "google-generativeai>=0.8.5",
    "openai>=1.93.1",
    
    # FastAPI 및 웹 서버
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "python-multipart>=0.0.20",
    "websockets>=15.0.1",
    
    # 설정 및 유틸리티
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.0",
    
    # 기타 유틸리티
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "ruff>=0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
