[project]
name = "yolo-midas"
version = "1.0.0"
description = "AI 기반 음식 질량 추정 시스템"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "ultralytics",
    "numpy",
    "opencv-python",
    "pillow",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "requests",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "websockets>=15.0.1",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "openai>=1.95.1",
    "timm>=1.0.17",
    "scikit-image>=0.25.2",
    "scipy>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "ipython",
    "jupyter",
]
